--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "webpack --mode=production",
     "dev": "npm-run-all --silent --parallel dev:*",
-    "dev:client": "webpack-dev-server"
+    "dev:client": "webpack-dev-server",
+    "start": "node server/index.js"
   },
   "husky": {
     "hooks": {
@@ -22,12 +23,16 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "devicons": "^1.8.0",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "nodemailer": "^6.4.3",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-parallax": "^3.0.0",
     "react-popper": "^1.3.7",
     "react-scroll": "^1.7.15",
-    "reactstrap": "^8.2.0"
+    "reactstrap": "^8.2.0",
+    "sendemail": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
