--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "devicons": "^1.8.0",
-    "express": "^4.17.1",
+    "devicons": "^2.15.1",
+    "express": "^4.18.2",
     "fs": "0.0.1-security",
     "nodemailer": "^6.6.1",
     "react": "16.12.0",
@@ -35,8 +35,9 @@
     "sendemail": "^4.0.0"
   },
   "devDependencies": {
-    "@babel/core": "7.7.2",
+    "@babel/core": "^7.23.5",
     "@babel/plugin-transform-react-jsx": "7.7.0",
+    "@webpack-cli/serve": "^2.0.5",
     "babel-eslint": "10.0.3",
     "babel-loader": "8.0.6",
     "eslint": "6.6.0",
@@ -50,7 +51,7 @@
     "lint-staged": "9.4.3",
     "npm-run-all": "4.1.5",
     "webpack": "^4.41.2",
-    "webpack-cli": "3.3.10",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^4.11.1"
   },
   "eslintIgnore": [
